# HoudiniFBX

./: CMakeLists.txt  build.bat
src/: CMakeLists.txt
src/ROP/: CMakeLists.txt  ROP_FBXAnimVisitor.C  ROP_FBXAnimVisitor.h  ROP_FBXBaseVisitor.C  ROP_FBXCommon.h  ROP_FBXMainVisitor.C  ROP_FBXMainVisitor.h  ROP_FBXUtil.C  ROP_FBXUtil.h
